# scripts

./: .gitignore  1.sh  1.sync-conflict-20241213-043456-FZDFJ2S.sh  README.md  mgit.sh  root_it.sh  s.sh  surfingKey.txt  surfingkeys.js  surfingkeys2.js  surfingkeys_custom.js
 '/home/xinyu/Music/: Alvaro Soler - Sofia [blank].mp4'.m4a  Camila Cabello - Shameless.mp4'.m4a
.stfolder/: syncthing-folder-8c5967.txt
arch_config/: 0-basic.sh  03-development.sh  1-bluetooth.sh  2-syncthing.sh  22-nvim.sh  4-keyd.sh  5-zsh.sh  6-rime.sh  7-node-install.sh  aider-install.sh  applications.sh  arch_config.org  arch_config.sh  basic.sh  bluetooth.sh  bspwm.sh  compile-emacs.sh  configure-git.sh  developpement.sh  font.sh  git-repositories.sh  install-emacs.sh  install_alacritty.sh  keyd.sh  latex.sh  nvidia.sh  rime.sh  theme.sh  useful-tools.sh  wps.sh  zathura-pdf.sh  zotero.sh  zsh.sh
autokey/: README.org
autokey/My Phrases/: .folder.json
autokey/My Phrases/daily/: .folder.json  .server.json
autokey/My Scripts/: .Open Website.json  .OpenWeb.json  .add word.json  .common applications.json  .edit file.json  .folder.json  .words.json  Open Website.py  SysInfo.py  add word.py  common applications.py  edit file.py  google text.py  ssh manager.py  words.py
autokey/archive/: .Abbreviation from selection.json  .folder.json  Abbreviation from selection.py  Phrase from selection.py
dmenu/: dofi  edit-file.sh  list-qutebrowser-bookmarks.sh  qutebrowser.sh  run_commands.sh  words-completion.sh
dockers/: docker-compose.yml  reader-docker-compose.yml  rsshub-docker-compose.yml  ttrss-docker-compose.yml
env/: aliases.sh
guix/: basic-packages.sh  doom-emacs-install.sh  guix-install.sh  init-sys.sh  keyd-install.sh  nvim-install.sh  zsh-install.sh
jscripts/: annotation-zotero-full-process.js  openAI-zotero.js  org-roam-protocol-temp.js  org-roam-protocol.js  org-roam-zotero.js  try.js
lisp_scripts/: git_control.el
py_scripts/: .folder.json  dictAdder.py  pyproject.toml  requirement.txt  requirements.txt  rofi-org-todo.py
py_scripts/My Phrases/daily/: server.txt
py_scripts/My Scripts/: .SysInfo.json  .common applications.json  .google text.json  .ssh manager.json  .words.json  OpenWeb.py  common applications.py  edit file.py
py_scripts/archive/: .Display window info.json  .Firefox Passwords.json  .Insert Date.json  .Phrase from selection.json  .upper lower case.json  .which frontend.json  Firefox Passwords.py  Open Working Directory.py  upper lower case.py  which frontend.py
py_scripts/assets/: report.md  开题报告 - 论文格式.org
sys_config/: README.md  aider-install.sh  alacritty-install.sh  basic-environment.sh  bspwm-install.sh  compile-emacs.sh  configure-git.sh  doom-emacs-install.sh  full-process.sh  git-repositories.sh  install-alacritty.sh  install-gvim.sh  install-vim-anywhre.sh  install-zsh.sh  keyd-install.sh  mpd-install.sh  neovide-install.sh  node-install.sh  nvim-install.sh  org-roam-config.sh  qutebrowser-install.sh  rime-install.sh  rofi-install.sh  set-variables.sh  sgpt-install.sh  syncthing-install.sh  useful-tools.sh  vim-install.sh  yabi-install.sh  yazi-install.sh  youtube-dl-install.sh  ytdlp-download.sh  zotero-install.sh  zsh-install.sh
sys_config/assets/: .zshrc  alacritty-config.toml  alacritty.yml  bspwmrc  cn  default.conf  qutebrowser-autoconfig.yml  qutebrowser-config.py  sxhkdrc
tools/: 1.sh  activate-or-launch  kanata_macos_x86_64  mgit.sh  ml.sh  open-default-windows.sh  open-qutebrowser.sh  open-servers.sh  program-has-focus  toggle-rime.sh  toggle-window  trash.sh
tools/assets/: kanata.kbd
tools/safe_rm/: install.sh  rm.sh
utils/: chat.py  configure-git.sh  install-alacritty.sh  install-dmenu.sh  install-gvim.sh  install-keyd.sh  install-qutebrowser.sh  keyd-install.sh  node-install.sh  vim-install.sh
utils/assets/: .Xmodmap  alacritty-config.toml  default.conf  qutebrowser-config.py
utils/~/.confg/.qutebrowser/: config.py
