[project]
name = "py-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.25.0",
    "deepseek>=1.0.0",
    "epc>=0.0.5",
    "markitdown>=0.0.1a3",
    "neovim>=0.3.1",
    "orjson>=3.10.15",
    "packaging>=24.2",
    "paramiko>=3.5.0",
    "pathlib>=1.0.1",
    "pip>=25.0",
    "pywubi>=0.0.2",
    "rapidfuzz>=3.12.1",
    "requests>=2.32.3",
    "ruff>=0.9.3",
    "setuptools>=75.8.0",
    "six>=1.17.0",
    "virtualenv>=20.29.1",
    "watchdog>=6.0.0",
    "yt-dlp>=2025.1.26",
]
