[project]
name = "py-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.25.0",
    "certifi>=2024.8.30",
    "deepseek>=1.0.0",
    "epc>=0.0.5",
    "ipython>=8.32.0",
    "markitdown>=0.0.1a3",
    "mutagen>=1.47.0",
    "neovim>=0.3.1",
    "numpy>=1.26.4",
    "orjson>=3.10.15",
    "packaging>=24.2",
    "paramiko>=3.5.0",
    "pathlib>=1.0.1",
    "pillow>=10.4.0",
    "pip>=25.0",
    "pyconsole>=0.5",
    "pycookiecheat>=0.8.0",
    "pycryptodome>=3.21.0",
    "pywubi>=0.0.2",
    "qtconsole>=5.6.1",
    "rapidfuzz>=3.12.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "rsa>=4.9",
    "ruff>=0.9.3",
    "setuptools>=75.8.0",
    "six>=1.17.0",
    "virtualenv>=20.29.1",
    "watchdog>=6.0.0",
    "yt-dlp>=2025.1.26",
]
