[project]
name = "py-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aider-install>=0.1.3",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "asttokens==3.0.0",
    "attrs==25.1.0",
    "basedpyright==1.25.0",
    "bcrypt==4.2.1",
    "beautifulsoup4==4.12.3",
    "blinker==1.9.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.8",
    "cobble==0.1.4",
    "comm==0.2.2",
    "cryptography==43.0.3",
    "cssselect==1.2.0",
    "debugpy==1.8.12",
    "decorator==5.1.1",
    "deepseek==1.0.0",
    "defusedxml==0.7.1",
    "distlib==0.3.9",
    "distro==1.9.0",
    "epc==0.0.5",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "exif==1.6.1",
    "feedparser==6.0.11",
    "filelock==3.16.1",
    "flask==3.1.0",
    "giturlparse==0.12.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.27.2",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.1.0",
    "jedi==0.19.2",
    "jeepney==0.8.0",
    "jinja2==3.1.5",
    "jiter==0.8.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "keyring==25.6.0",
    "lxml==5.3.0",
    "mammoth==1.9.0",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markdownify==0.14.1",
    "markitdown==0.0.1a3",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "more-itertools==10.6.0",
    "msgpack==1.1.0",
    "mutagen==1.47.0",
    "neovim==0.3.1",
    "nest-asyncio==1.6.0",
    "nodejs-wheel-binaries==22.13.1",
    "numpy==1.26.4",
    "openai==1.56.2",
    "openpyxl==3.1.5",
    "orjson==3.10.15",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pandas==2.2.3",
    "paramiko==3.5.0",
    "parso==0.8.4",
    "pathlib==1.0.1",
    "pathvalidate==3.2.1",
    "pdfminer-six==20240706",
    "pexpect==4.9.0",
    "pillow==10.4.0",
    "platformdirs==4.3.6",
    "plum-py==0.8.7",
    "prompt-toolkit==3.0.50",
    "psutil==6.1.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "puremagic==1.28",
    "pyasn1==0.6.1",
    "pyconsole==0.5",
    "pycookiecheat==0.8.0",
    "pycountry==24.6.1",
    "pycparser==2.22",
    "pycryptodome==3.21.0",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "pydub==0.25.1",
    "pygit2==1.14.1",
    "pygments==2.19.1",
    "pymupdf==1.25.3",
    "pynacl==1.5.0",
    "pynvim==0.5.2",
    "pypinyin==0.53.0",
    "pyqt6==6.5.0",
    "pyqt6-qt6==6.5.0",
    "pyqt6-sip==13.10.0",
    "pyqt6-webengine==6.5.0",
    "pyqt6-webengine-qt6==6.5.0",
    "pyquery==2.0.1",
    "pysocks==1.7.1",
    "pytaglib==3.0.0",
    "python-dateutil==2.9.0.post0",
    "python-pptx==1.0.2",
    "pytz==2024.2",
    "pywubi==0.0.2",
    "pyzmq==26.2.1",
    "qtconsole==5.6.1",
    "qtpy==2.4.2",
    "rapidfuzz==3.12.1",
    "requests==2.32.3",
    "retrying==1.3.4",
    "rich==13.9.4",
    "rsa==4.9",
    "ruff==0.9.3",
    "secretstorage==3.3.3",
    "setuptools==75.8.0",
    "sexpdata==1.0.2",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "speechrecognition==3.13.0",
    "stack-data==0.6.3",
    "streamlink==7.1.3",
    "tld==0.13",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "trio==0.29.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "unidiff==0.7.5",
    "urllib3==2.2.3",
    "virtualenv==20.29.1",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
    "xlsxwriter==3.2.0",
    "youtube-transcript-api==0.6.3",
    "yt-dlp==2025.1.26",
]
